fix spacing between chart and credits

--- a/css/charts.css
+++ b/css/charts.css
@@ -8,7 +8,7 @@
   width: 100%;
   max-width: 760px;
   margin: 0 auto;
-  padding-bottom: 150px
+  padding-bottom: 0px;
 }
 
 /* svg {
