--- a/css/main.css
+++ b/css/main.css
@@ -494,7 +494,7 @@ a {
 footer {
     position: relative;
     background-color: #f1f2f2;
-    margin-top: 100px;
+    margin-top: 80px;
     padding-bottom: 25px;
     bottom: 0;
     overflow: hidden;
